--- a/static/empty.html
+++ b/static/empty.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-  <h1>Du bist Offline</h1>
+  <h1>Du bist Offline oder Wartungsarbeiten</h1>
   <p>Bitte überprüfe deine Internetverbindung!</p>
+  <p>Sollten wir grade unseren Server neu starten (um neue Funktionen in die Website einzubauen) kann diese Fehlermeldung auch auftreten. Bitte aktuallisiere die Seite in ca. 2min nochmal dann dürfte der neustart abgeschlossen sein.</p>
 </body>
 
 </html>
