add readonly widget to cms

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -8,5 +8,6 @@
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script crossorigin src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+  <script src="./widgets.js"></script>
 </body>
 </html>
